add rudimentary start script